--- a/test_scrapper/scraper/templates/scraper/grafico_producto.html
+++ b/test_scrapper/scraper/templates/scraper/grafico_producto.html
@@ -111,5 +111,18 @@
 
       new Chart(document.getElementById("chart"), config);
     </script>
+    <footer>
+      <a href="{% url 'about_us' %}">Sobre Mi</a>
+      <a href="{% url 'contacto' %}">Contacto</a>
+      <a href="{% url 'usuario' %}">Usuario</a>
+      <p>Todos los derechos reservados.</p>
+      <p>
+        Información de contacto:
+        <a
+          href="mailto:noe.alaniz@isri.edu.ar?subject=Consulta%20sobre%20el%20servicio"
+          >noe.alaniz@isri.edu.ar</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
